deploy/stuff-control/templates/stuff-control-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: stuff-control
  name: stuff-control
  namespace: stuff-control
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stuff-control
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: stuff-control
    spec:
      containers:
      - image: ghcr.io/itobey/stuff-control-service:0.0.10-snapshot
        imagePullPolicy: Always
        name: stuff-control
      restartPolicy: Always
      imagePullSecrets:
      - name: ghcr-pull-secret
