deploy/stuff-control/templates/stuff-control-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stuff-control
  namespace: stuff-control
  labels:
    app: stuff-control
spec:
  ports:
    - port: 8080
  selector:
    app: stuff-control
  type: ClusterIP
